# equadiffGASNET

./: CMakeLists.txt  Readme.md  batch.sh  run-batch.sh  run-local.sh
include/: success_or_die.hh  up_down.hh
src/: gaspi_pencil_main.cc
